Completed exercise 1 with JS.

--- a/react-fundamentals/course-content/src/exercise/01.html
+++ b/react-fundamentals/course-content/src/exercise/01.html
@@ -14,3 +14,15 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<html>
+  <body>
+    <div id="root"></div>
+  </body>
+  <script type="module">
+    let divElement = document.createElement('div');
+    divElement.textContent = "Hello World";
+    divElement.className = "container";
+    document.getElementById('root').append(divElement);
+  </script>
+</html>
